# ops

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  env.sh  ops.h
.github/ISSUE_TEMPLATE/: bug_report.md  optimize-issue-template.md
.github/workflows/: deploying.yml  pre-checkin.yml  unit_test.yml  workflow.yml
benchmark/: README.md
docs/uml/: class_graph.md
executor/: executor.cpp  executor.h  worker.cpp  worker.h
graph/: graph.h
kernels/: kernels.h
node/: node.h
tests/: CMakeLists.txt  main.cpp
tools/: commit-template  pre-commit
